2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range_base::normalize_addresses): Handle
	VR_UNDEFINED.

2019-11-04  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (dump_assert_info): New.
	(dump_asserts_info): New.

2019-11-04  Jan Hubicka  <jh@suse.cz>

	* ipa-inline-transform.c: Include ipa-utils.h
	(inline_call): Set thunk_expansion flag.
	* ipa-utils.h (thunk_expansion): Declare.
	* ipa-devirt.c (thunk_expansion): New global var.
	(devirt_node_removal_hook): Do not invalidate cache while
	doing thunk expansion.

2019-11-04  Tamar Christina  <tamar.christina@arm.com>

	* tree-vect-slp.c (vectorize_slp_instance_root_stmt): Initialize rstmt.

2019-11-04  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92349
	* tree-vrp.c (vrp_prop::check_array_ref): Avoid assuming struct
	memebers have constant sizes.

2019-11-04  Andre Vieira  <andre.simoesdiasvieira@arm.com>

	* tree-vect-loop.c (vect_analyze_loop): Remove orig_loop_vinfo
	parameter.
	* tree-vectorizer.h (vect_analyze_loop): Update declaration.
	* tree-vectorizer.c (try_vectorize_loop_1): Update calls to
	vect_analyze_loop.

2019-11-04  Joel Hutton  <Joel.Hutton@arm.com>

	* expr.c (store_constructor): Modify to handle single element vectors.
	* tree-vect-slp.c (vect_analyze_slp_instance): Add case for vector
	constructors.
	(vect_slp_check_for_constructors): New function.
	(vect_slp_analyze_bb_1): Call new function to check for vector
	constructors.
	(vectorize_slp_instance_root_stmt): New function.
	(vect_schedule_slp): Call new function to vectorize root stmt of vector
	constructors.
	* tree-vectorizer.h (SLP_INSTANCE_ROOT_STMT): New field.

2019-11-04  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92345
	* tree-vect-loop.c (vect_is_simple_reduction): Return whether
	we produced a reduction chain.
	(vect_analyze_scalar_cycles_1): Do not add reduction chains to
	LOOP_VINFO_REDUCTIONS.

2019-11-04  Jan Hubicka  <jh@suse.cz>
