@@ -282,7 +282,6 @@ extern bool infer_value_range (gimple *, tree, tree_code *, tree *);
 extern bool vrp_bitmap_equal_p (const_bitmap, const_bitmap);
 
 extern bool range_int_cst_p (const value_range_base *);
-extern bool range_int_cst_singleton_p (const value_range_base *);
 
 extern int compare_values (tree, tree);
 extern int compare_values_warnv (tree, tree, bool *);
